--- a/index.html
+++ b/index.html
@@ -19,33 +19,15 @@
       width:90%;max-width:660px;min-height:320px;padding:32px;background:white;border-radius:20px;
       box-shadow:0 10px 30px rgba(0,0,0,0.18);display:flex;flex-direction:column;align-items:center;justify-content:flex-start;
     }
-    /* ID = große zentrale Überschrift */
     .card-id{
-      font-weight:800;
-      color:#111;
-      font-size:clamp(2rem,5vw,3rem);
-      margin-bottom:18px;
-      text-align:center;
-      line-height:1;
-      letter-spacing:0.02em;
+      font-weight:800;color:#111;font-size:clamp(2rem,5vw,3rem);margin-bottom:18px;text-align:center;line-height:1;letter-spacing:0.02em;
     }
-    /* Frage = normaler Schriftschnitt, nicht fett */
     .card-question{
-      font-weight:400;
-      font-size:clamp(1rem,2.6vw,1.6rem);
-      color:#111;
-      white-space:pre-wrap;
-      word-break:break-word;
-      text-align:center;
-      max-width:100%;
+      font-weight:400;font-size:clamp(1rem,2.6vw,1.6rem);color:#111;white-space:pre-wrap;word-break:break-word;text-align:center;max-width:100%;
     }
     .edge-touch{position:absolute;top:0;height:100%;width:20%;z-index:10}
     .left-edge{left:0} .right-edge{right:0}
-    .status{
-      position: absolute; left: 12px; bottom: 12px; font-size: 13px; color: rgba(0,0,0,0.6);
-      background: rgba(255,255,255,0.75); padding:6px 8px; border-radius:8px;
-      backdrop-filter: blur(4px);
-    }
+    .status{position:absolute;left:12px;bottom:12px;font-size:13px;color:rgba(0,0,0,0.6);background:rgba(255,255,255,0.75);padding:6px 8px;border-radius:8px;backdrop-filter:blur(4px)}
     @media(max-width:360px){ .card{padding:20px;border-radius:14px} .card-id{font-size:1.7rem;margin-bottom:14px} }
   </style>
 </head>
@@ -54,15 +36,13 @@
     <div class="edge-touch left-edge" id="leftEdge" aria-hidden="true"></div>
     <div class="edge-touch right-edge" id="rightEdge" aria-hidden="true"></div>
 
-    <div class="card" id="card">
-      Lade Fragen…
-    </div>
-
+    <div class="card" id="card">Lade Fragen…</div>
     <div class="status" id="status">Status: initialisiere…</div>
   </div>
 
 <script>
-/* ---------- CSV Parser (robust) ---------- */
+/* ---------- Helpers ---------- */
+// parse a text into rows using delim; supports quoted fields ("") and handles CRLF/LF
 function parseCSVRows(text, delim=','){
   const rows = [];
   let cur='', row=[], inQuotes=false;
@@ -73,38 +53,50 @@ function parseCSVRows(text, delim=','){
       inQuotes = !inQuotes;
       continue;
     }
-    if(!inQuotes && ch === delim){
-      row.push(cur); cur=''; continue;
-    }
+    if(!inQuotes && ch === delim){ row.push(cur); cur=''; continue; }
     if(!inQuotes && (ch === '\n' || ch === '\r')){
       if(ch === '\r' && text[i+1] === '\n') i++;
       row.push(cur); rows.push(row); row=[]; cur=''; continue;
     }
     cur += ch;
   }
-  if(cur !== '' || row.length>0){ row.push(cur); rows.push(row); }
+  if(cur !== '' || row.length > 0){ row.push(cur); rows.push(row); }
   return rows;
 }
-function detectAndParseCSV(text){
-  let rows = parseCSVRows(text, ',');
-  if(rows.length && rows.every(r => r.length === 1)){
-    const s = parseCSVRows(text, ';');
-    if(s.length && s.some(r => r.length > 1)) rows = s;
+
+// detect whether there is at least one unquoted semicolon in the text
+function hasUnquotedSemicolon(text){
+  let inQuotes = false;
+  for(let i=0;i<text.length;i++){
+    const ch = text[i], next = text[i+1];
+    if(ch === '"'){
+      if(inQuotes && next === '"'){ i++; continue; } // escaped quote
+      inQuotes = !inQuotes;
+      continue;
+    }
+    if(!inQuotes && ch === ';') return true;
+    // ignore other chars
   }
-  return rows.filter(r => r.some(c => (c||'').toString().trim() !== ''));
+  return false;
 }
 
-/* ---------- Cleaning helper ---------- */
+// choose delimiter: prefer semicolon if any unquoted semicolons exist
+function chooseDelimiter(text){
+  if(hasUnquotedSemicolon(text)) return ';';
+  return ','; // fallback
+}
+
+function escapeHtml(s){ return String(s).replace(/&/g,'&amp;').replace(/</g,'&lt;').replace(/>/g,'&gt;').replace(/"/g,'&quot;'); }
+
+// clean field: trim, remove surrounding quotes and stray semicolons at edges
 function cleanField(s){
   if(s === undefined || s === null) return '';
   let t = String(s).trim();
-  // remove outer quotes
   if((t.startsWith('"') && t.endsWith('"')) || (t.startsWith("'") && t.endsWith("'"))){
     t = t.slice(1,-1);
   }
-  // remove stray semicolons at start or end
+  // remove semicolons at start/end leftover
   t = t.replace(/^\s*;+\s*/,'').replace(/\s*;+\s*$/,'');
-  // remove repeated whitespace edges
   return t.trim();
 }
 
@@ -128,7 +120,6 @@ function showCard(){
     return;
   }
   const q = questions[currentIndex];
-  // ID (nur Spalte A), Frage (Spalte B)
   const idText = cleanField(q.id);
   const questionText = cleanField(q.question);
   cardEl.innerHTML = `<div class="card-id">${escapeHtml(idText)}</div><div class="card-question">${escapeHtml(questionText)}</div>`;
@@ -136,31 +127,59 @@ function showCard(){
   setStatus(`Karte ${currentIndex+1} / ${questions.length}`);
 }
 
-/* small escape */
-function escapeHtml(s){ return String(s).replace(/&/g,'&amp;').replace(/</g,'&lt;').replace(/>/g,'&gt;').replace(/"/g,'&quot;'); }
-
-/* load CSV */
+/* ---------- Load CSV (delimiter choice: semicolon preferred) ---------- */
 async function loadCSV(){
   setStatus('Lade cards.csv …');
   try {
     const res = await fetch('cards.csv', {cache:'no-store'});
     if(!res.ok) throw new Error('HTTP ' + res.status);
     const text = await res.text();
-    const rows = detectAndParseCSV(text);
+    const delim = chooseDelimiter(text);       // prefer semicolon if present unquoted
+    const rows = parseCSVRows(text, delim);
     if(!rows.length) throw new Error('CSV leer oder fehlerhaft');
-    // detect header row
+    // detect header row in first row (id/question/... keywords)
     let start = 0;
     const firstLow = rows[0].map(c => String(c).toLowerCase());
-    if(firstLow.some(c => /(^|\s|,)(id|frage|question|nummer|nr)(\s|,|$)/i.test(c))) start = 1;
+    if(firstLow.some(c => /(^|\s|,|;)(id|frage|question|nummer|nr)(\s|,|;|$)/i.test(c))) start = 1;
+
     const parsed = [];
     for(let i=start;i<rows.length;i++){
       const r = rows[i];
+      // If delimiter was semicolon, id should be r[0], question r[1] (and r[1] may contain commas safely)
+      // If delimiter was comma and question contains commas in quotes, parser already handled it.
       const rawId = r[0] ?? '';
-      const rawQ = r[1] ?? r.slice(1).join(',');
+      // If row has only 1 column (unlikely), treat everything after first semicolon fallback: attempt manual split on first unquoted semicolon
+      let rawQuestion = '';
+      if(r.length >= 2) {
+        rawQuestion = r[1];
+        if(r.length > 2) {
+          // if there are extra columns (unlikely for semicolon format), join them with comma (they are part of question)
+          rawQuestion = [r.slice(1).join(',')].join(',');
+        }
+      } else {
+        // fallback: find first unquoted semicolon in original line and split there
+        const origLine = text.split(/\r\n|\n|\r/)[i]; // approximate
+        if(origLine) {
+          let inQ=false, idx=-1;
+          for(let k=0;k<origLine.length;k++){
+            const ch = origLine[k], nxt = origLine[k+1];
+            if(ch === '"'){ if(inQ && nxt === '"'){ k++; continue;} inQ = !inQ; continue; }
+            if(!inQ && ch === ';'){ idx = k; break; }
+          }
+          if(idx >= 0) {
+            rawQuestion = origLine.slice(idx+1);
+          } else {
+            rawQuestion = r[0]; // give something
+          }
+        } else {
+          rawQuestion = '';
+        }
+      }
       const id = cleanField(rawId) || String(i - start + 1);
-      const question = cleanField(rawQ || '');
+      const question = cleanField(rawQuestion || '');
       if(question) parsed.push({id, question});
     }
+
     questions = parsed;
     if(questions.length === 0) throw new Error('Keine gültigen Fragezeilen (Spalte B leer?)');
     shuffleQuestions();
@@ -169,43 +188,30 @@ async function loadCSV(){
     showCard();
   } catch(err){
     console.error(err);
-    cardEl.innerHTML = `<div style="color:#b20; text-align:center; padding:12px;">
+    cardEl.innerHTML = `<div style="color:#b20;text-align:center;padding:12px;">
       Fehler beim Laden der Datei.<br><br>${escapeHtml(err.message)}<br><br>
-      Prüfe: Datei <code>cards.csv</code> im gleichen Ordner, UTF-8, Spalte A = ID, Spalte B = Frage.
+      Prüfe: Datei <code>cards.csv</code> im gleichen Ordner, UTF-8, Spalte A = ID, Spalte B = Frage (getrennt mit Semikolon).
     </div>`;
     setStatus('Fehler: ' + (err.message || 'unbekannt'));
   }
 }
 
-function shuffleQuestions(){
-  for(let i=questions.length-1;i>0;i--){
-    const j = Math.floor(Math.random()*(i+1));
-    [questions[i], questions[j]] = [questions[j], questions[i]];
-  }
-}
+function shuffleQuestions(){ for(let i=questions.length-1;i>0;i--){ const j=Math.floor(Math.random()*(i+1)); [questions[i],questions[j]]=[questions[j],questions[i]]; } }
 
 /* ---------- Navigation ---------- */
 let startX = null, startY = null;
-document.addEventListener('touchstart', e => { if(e.touches && e.touches[0]){ startX = e.touches[0].clientX; startY = e.touches[0].clientY; } }, {passive:true});
-document.addEventListener('touchmove', e => { if(startX===null) return; const cx = e.touches[0].clientX, cy = e.touches[0].clientY; const dx = Math.abs(cx-startX), dy = Math.abs(cy-startY); if(dy>dx) e.preventDefault(); }, {passive:false});
-document.addEventListener('touchend', e => {
-  if(startX===null) return;
-  const endX = e.changedTouches[0].clientX; const diff = endX - startX;
-  if(Math.abs(diff) > 50 && questions.length){
-    currentIndex = (currentIndex + (diff>0?-1:1) + questions.length) % questions.length;
-    showCard();
-  }
-  startX = null; startY = null;
-}, {passive:true});
+document.addEventListener('touchstart', e => { if(e.touches&&e.touches[0]){ startX=e.touches[0].clientX; startY=e.touches[0].clientY; } }, {passive:true});
+document.addEventListener('touchmove', e => { if(startX===null) return; const cx = e.touches[0].clientX, cy = e.touches[0].clientY; const dx=Math.abs(cx-startX), dy=Math.abs(cy-startY); if(dy>dx) e.preventDefault(); }, {passive:false});
+document.addEventListener('touchend', e => { if(startX===null) return; const endX = e.changedTouches[0].clientX, diff = endX - startX; if(Math.abs(diff) > 50 && questions.length){ currentIndex = (currentIndex + (diff>0?-1:1) + questions.length) % questions.length; showCard(); } startX=null; startY=null; }, {passive:true});
 
 document.getElementById('leftEdge').addEventListener('click', () => { if(!questions.length) return; currentIndex = (currentIndex - 1 + questions.length) % questions.length; showCard(); });
 document.getElementById('rightEdge').addEventListener('click', () => { if(!questions.length) return; currentIndex = (currentIndex + 1) % questions.length; showCard(); });
-
-document.addEventListener('keydown', e => { if(!questions.length) return; if(e.key === 'ArrowLeft'){ currentIndex = (currentIndex - 1 + questions.length) % questions.length; showCard(); } if(e.key === 'ArrowRight'){ currentIndex = (currentIndex + 1) % questions.length; showCard(); } });
+document.addEventListener('keydown', e => { if(!questions.length) return; if(e.key === 'ArrowLeft'){ currentIndex=(currentIndex-1+questions.length)%questions.length; showCard(); } if(e.key==='ArrowRight'){ currentIndex=(currentIndex+1)%questions.length; showCard(); } });
 
 ['gesturestart','gesturechange','gestureend'].forEach(ev => document.addEventListener(ev, e => e.preventDefault()));
 
 loadCSV();
+/* expose for console debugging */ window._cardsApp = { loadCSV, questions };
 </script>
 </body>
 </html>
